0.8.0 (currently working on)
- [#2787] Change: Registration heading should have two markers for title and date
- [#2786] Fix: Subpart REGISTRATION_BOTTOM is not rendered if there's only an error message
- [#2782] Feature: Add lodging model and mapper
- [#2781] Feature: Add food model and mapper
- [#2779] Feature: Add checkbox model and mapper
- [#2778] Feature: Add payment method model and mapper
- [#2777] Feature: Add target group model and mapper
- [#2776] Feature: Add event type model and mapper
- [#2686] Fix: Rename and clean up the e-mail template
- [#2759] Feature: Add place model and mapper
- [#2757] Feature: Add organizer model and mapper
- [#2758] Feature: Add category model and mapper
- [#2755] Fix: CLI user needs the uppercased prefix _CLI_
- [#2752] Feature: Add skill model and mapper
- [#2726] Feature: Use texts from locallang in the CLI user's language for the CLI-sent e-mail
- [#2735] Fix: EventMailForm::sendEmailToAttendees sends duplicate e-mails
- [#2736] Feature: Add a hook for items in the list view, patch by Andre Dittmar
- [#2696] Change: Added a test for ensuring that no mails are sent when attendancesMin is 0
- [#2595] Feature: Add some (very basic) CSS for the e-mails to the attendees
- [#2528] Feature: Use separate e-mail bodies in the thank-you e-mail depending on whether an event is confirmed
- [#2734] Change: Move methods from tx_seminars_speakerchild to tx_seminars_speaker
- [#2724] Fix: Country list is not localized
- [#2731] Fix: plugin.tx_seminars.allowRegistrationForEventsWithoutDate is called like a switch available in flexforms but it is not in flexforms
- [#2607] Feature: Attach the CSV file to the CLI-triggered e-mails to the organizers
- [#2708] Feature: Add a FrontEndLoginManager
- [#2729] Fix: lowercase the CLI user defined in localconf
- [#2603] Feature: In the CLI module, check whether there are any events that are in the "planned" state