@@ -297,7 +297,8 @@ t3lib_extMgm::addStaticFile($_EXTKEY, 'static/', 'Seminars');
 t3lib_extMgm::addPlugin(
 	array(
 		'LLL:EXT:seminars/locallang_db.xml:tt_content.list_type_pi1',
-		$_EXTKEY.'_pi1'
+		$_EXTKEY.'_pi1',
+		t3lib_extMgm::extRelPath($_EXTKEY) . 'ext_icon.gif',
 	),
 	'list_type'
 );
